kubernetes/apps/minio/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
