kubernetes/apps/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app: minio
spec:
  clusterIP: None
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 80
